--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,18 @@
+h1 {
+    text-align: center;
+}
 .link {
-    border: 10px;
+    border: 1px solid black;
+}
+.name_1 a {
+    color: red;
+    width: 20%;
+}
+.name_2 a {
+    color: aqua;
+    width: 20%;
+}
+.name_3 a {
+    color: yellow;
+    width: 60%;
 }
