--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,8 +2,9 @@ h1 {
     text-align: center;
 }
 .link {
-    border: 1px solid black;
     width: 100%;
+    height: 50px;
+    background-color: grey;
 }
 .red a {
     color: red;
@@ -14,18 +15,15 @@ h1 {
 .yellow a {
     color: yellow;
 }
-.name-1 {
-    width: 20%;
+.width-1 {
+    width: 7%;
 }
-.name-2 {
-     width: 20%;
-}
-.name-3 {
-    width: 60%;
+.width-2 {
+    width: 90%;
 }
 .flag {
     width: 250px;
-    height: 38.7px;
+    height: 40px;
 }
 .white-color {
     background-color: white;
@@ -58,7 +56,7 @@ h1 {
 }
 .flag-2  {
     width: 250px;
-    height: 120px;
+    height: 100px;
 }
 .circle {
     border: 1px solid red;
@@ -76,14 +74,16 @@ h1 {
     background-color: green;
 }
 .flag-3 {
-    width: 83.3px;
+    width: 33.33%;
     height: 120px;
     float: left;
 }
 .border {
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
-    border-left: 1px solid black;
-    border-right: 1px solid black;
-}
+    border: 1px solid black;
+    width: 250px;
+    height: 120px;
 
+}
+.size {
+    font-size: 40px;
+}
